profile ok & posts list

--- a/etc/routing.yml
+++ b/etc/routing.yml
@@ -2,6 +2,10 @@ admin:
     pattern: '/'
     package: admin
 
+front:
+    pattern: '/'
+    package: front
+
 user:
     pattern: '/'
     package: user
