--- a/src/Front/routing.yml
+++ b/src/Front/routing.yml
@@ -1,5 +1,9 @@
-posts:
+home:
     pattern: '/'
+    controller: 'Front\Controller\Posts'
+
+posts:
+    pattern: 'page(/page)'
     controller: 'Front\Controller\Posts'
 
 post_default:
