--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
 		"robmorgan/phinx": "*@stable",
 		"fzaninotto/faker": "~1.0@stable",
 		"michelf/php-markdown": "1.*",
+		"kilte/pagination": "1.1.1",
 
 		"illuminate/view" : "4.*"
 	},
