--- a/etc/config.dist.yml
+++ b/etc/config.dist.yml
@@ -38,3 +38,7 @@ ioc:
         session: system.session
         cache: system.cache
         debugger: whoops
+amazon:
+    user:
+    access_key:
+    secret_key:
